@@ -33,4 +33,21 @@
  * @subpackage t3lib
  */
 class t3lib_contextmenu_ActionCollection extends ArrayObject {
+	/**
+	 * Returns the collection in an array representation for e.g. serialization
+	 *
+	 * @return array
+	 */
+	public function toArray() {
+		$iterator = $this->getIterator();
+		$arrayRepresentation = array();
+		while ($iterator->valid()) {
+			$arrayRepresentation[] = $iterator->current()->toArray();
+			$iterator->next();
+		}
+
+		return $arrayRepresentation;
+	}
 }
+
+?>
